--- a/app.json
+++ b/app.json
@@ -1,10 +1,5 @@
 {
   "expo": {
-    "sdkVersion": "14.0.0",
-    "packagerOpts": {
-      "assetExts": [
-        "ttf"
-      ]
-    }
+    "sdkVersion": "15.0.0"
   }
 }
