--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "bookstore",
+  "name": "bookStoreApp",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "0.0.19",
-    "jest-expo": "^0.2.1",
-    "react-test-renderer": "~15.4.0"
+    "react-native-scripts": "0.0.21",
+    "jest-expo": "^0.3.0",
+    "react-test-renderer": "~15.4.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -19,9 +19,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "14.0.2",
+    "expo": "^15.0.0",
     "react": "~15.4.0",
-    "react-native": "0.41.2",
-    "react-navigation": "^1.0.0-beta.7"
+    "react-native": "0.42.3"
   }
 }
