--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "expo": {
     "sdkVersion": "15.0.0"
   },
-  "name": "bookStore",
+  "name": "bookStoreEjected",
   "displayName": "Pocket BookStore"
 }
